# Nsabag

./: .gitattributes  .gitignore  INSTALL.cmd  README.md  SYSTEM-PROVENANCE.md  bootstrap.ps1
00-Constitution/: DUPLICATE-DETECTION.md  LAWS.md  OPEN-QUESTIONS.md  PRINCIPLES.md  ZONES.md
04-Monday-Architecture/: KICKOFF-PROMPT.md  MENTION-AGENTS-PLAN.md  README.md  WEBHOOK-REFLEXES-PLAN.md
04-Monday-Architecture/Monday-Operations/: AGENTS.md  CLAUDE.md  PROJECT.md
04-Monday-Architecture/Monday-Setup/: AGENTS.md  CLAUDE.md  PROJECT.md
05-AI-Framework/Call-Recording/: AGENTS.md  CLAUDE.md  PROJECT.md
06-Development/: SERVICES-RELIABILITY-PLAN.md
06-Development/Smart-Time/: AGENTS.md  CLAUDE.md  PROJECT.md  SPEC-time-base-v1.md
07-Department-Agents/: README.md
07-Department-Agents/Legal-Agent/: AGENT.md  (+3 more)
08-Legal-Documents-Assistant/: CLAUDE.md  INSTRUCTIONS.md  MEMORY.md  לקחים.md  נהלים.md
08-Services-Code/: README.md
08-עוזר-משפטי/: CLAUDE.md  INSTRUCTIONS.md  MEMORY.md  העדפות-נחי.md
09-Monday-Agents/: 00-architecture.md  README.md  RECOVERY.md  VERIFICATION-REPORT.md
company-layer/: 00-EXTERNAL-AGENTS-LAW.md
docs/: ARCHITECTURE.md  NAPS2.he.md  OFFICE-ONEPAGER.he.md  QUICKSTART.he.md  SHARE-LAN.he.md  TROUBLESHOOTING.he.md
userspace-driver/: 99-av210.rules  README.md  pyproject.toml
userspace-driver/av210/: __init__.py  __main__.py  cli.py  protocol.py  scanner.py  transport.py
userspace-driver/tests/: test_protocol.py
windows-bridge/: .gitattributes  README.md  attach-scanner.ps1  install.ps1  setup-wsl.sh  share-lan.ps1  uninstall.ps1
(+197 files in other folders)
