[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "av210-scanner-driver"
version = "0.1.0"
description = "Userspace USB driver for Avision AV210-family sheetfed scanners (port of the SANE avision protocol)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-2.0-or-later" }
authors = [{ name = "AV210 userspace driver contributors" }]
keywords = ["scanner", "avision", "av210", "usb", "sane"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
]
dependencies = [
    "pyusb>=1.2",
    "pillow>=9.0",
    'libusb-package; platform_system == "Windows"',
]

[project.scripts]
av210 = "av210.cli:main"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["av210*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
